--- a/rade-webapp/src/main/resources/i18n/messages.properties
+++ b/rade-webapp/src/main/resources/i18n/messages.properties
@@ -1,6 +1,25 @@
 # Fichier d'internationalisation français (langue par défaut) pour les pages jsp.
 
+# Header (aesn_header.jsp)
+header.breadcrumb.here=Vous êtes ici:
+header.breadcrumb.search.button=Rechercher
+header.menu.title.referentiel=Référentiel
+header.menu.item.searchregion=Recherche Région
+header.menu.item.searchdepartment=Recherche Département
+header.menu.item.searchcommune=Recherche Commune
+header.menu.item.searchbassin=Recherche Bassin
+header.menu.item.searchdelegation=Recherche Délégation
+header.menu.title.history=Historique
+header.menu.item.searchaudit=Recherche Audit
+header.menu.title.admin=Administration
+header.menu.item.admin.info=Info Rade
+header.menu.item.admin.status=Etat Rade
+header.menu.item.admin.logs=Logs Rade
+header.menu.item.admin.services=Services
+header.menu.item.admin.batch=Batchs
+
 # Page de Login (login.jsp)
+#login.title=Login
 login.username=Login
 login.password=Mot de passe
 login.username.placeholder=Votre login
