--- a/rade-webapp/src/main/resources/i18n/messages_en.properties
+++ b/rade-webapp/src/main/resources/i18n/messages_en.properties
@@ -1,6 +1,25 @@
 # English internationalisation file for jsp pages.
 
+# Header (aesn_header.jsp)
+header.breadcrumb.here=You are here:
+header.breadcrumb.search.button=Find
+header.menu.title.referentiel=Repository
+header.menu.item.searchregion=Region Search
+header.menu.item.searchdepartment=Department Search
+header.menu.item.searchcommune=Commune Search
+header.menu.item.searchbassin=Bassin Search
+header.menu.item.searchdelegation=Delegation Search
+header.menu.title.history=History
+header.menu.item.searchaudit=Audit Search
+header.menu.title.admin=Administration
+header.menu.item.admin.info=Rade Details
+header.menu.item.admin.status=Rade Status
+header.menu.item.admin.logs=Rade Logs
+header.menu.item.admin.services=Services
+header.menu.item.admin.batch=Batches
+
 # Login Page (login.jsp)
+#login.title=Login
 login.username=Username
 login.password=Password
 login.username.placeholder=Enter Username
