--- a/rade-webapp/src/main/resources/i18n/messages.properties
+++ b/rade-webapp/src/main/resources/i18n/messages.properties
@@ -1,7 +1,15 @@
 # Fichier d'internationalisation français (langue par défaut) pour les pages jsp.
 
 # Header (aesn_header.jsp)
-header.breadcrumb.here=Vous êtes ici:
+header.login=Se connecter
+header.logout=Se déconnecter
+header.breadcrumb.here=Vous êtes ici
+header.breadcrumb.search.placeholder=Code
+header.breadcrumb.search.option.region=Région
+header.breadcrumb.search.option.department=Département
+header.breadcrumb.search.option.commune=Commune
+header.breadcrumb.search.option.bassin=Bassin
+header.breadcrumb.search.option.delegation=Délégation
 header.breadcrumb.search.button=Rechercher
 header.menu.title.referentiel=Référentiel
 header.menu.item.searchregion=Recherche Région
@@ -25,3 +33,42 @@ login.password=Mot de passe
 login.username.placeholder=Votre login
 login.password.placeholder=Votre mot de passe
 login.submit=Valider
+
+# Page de Recherche Commune (communesearch.jsp)
+#communesearch.title=Rechercher une Commune
+communesearch.label.code=Code INSEE
+communesearch.label.name=Nom
+communesearch.label.region=Région
+communesearch.label.department=Département
+communesearch.label.bassin=Circonscription bassin
+communesearch.label.date=Date d'effet
+communesearch.option.chooseregion=Sélectionner une région...
+communesearch.option.choosedept=Sélectionner un département...
+communesearch.option.choosebassin=Sélectionner une circonscription...
+communesearch.button.reset=Annuler
+communesearch.button.submit=Rechercher
+communesearch.error.code=Le code INSEE doit être composé de cinq chiffres ou lettres.
+communesearch.error.date=La date n'est pas valide.
+communesearch.error.empty=Au moins un des champs doit être renseigné.
+
+# Page de Resultats de la Recherche Commune (communeresult.jsp)
+#communeresult.title=Liste des résultats
+communeresult.label.code=Code INSEE
+communeresult.label.name=Nom
+communeresult.label.region=Région
+communeresult.label.department=Département
+communeresult.label.bassin=Circonscription
+communeresult.label.date=Date d'effet
+communeresult.tablecol.commune=Commune
+communeresult.tablecol.parents=Entités mères
+communeresult.tablecol.commune.code=Code
+communeresult.tablecol.commune.name=Nom
+communeresult.tablecol.commune.start=Début validité
+communeresult.tablecol.commune.end=Fin validité
+communeresult.tablecol.parents.reason=Motif de modification
+communeresult.tablecol.parents.code=Code INSEE
+communeresult.button.back=Retour
+communeresult.button.export=Exporter sous Excel
+
+# Page de Details Commune (communedisplay.jsp)
+#communedisplay.title=Détails Commune
