--- a/rade-webapp/src/main/resources/i18n/messages_en.properties
+++ b/rade-webapp/src/main/resources/i18n/messages_en.properties
@@ -1,7 +1,15 @@
 # English internationalisation file for jsp pages.
 
 # Header (aesn_header.jsp)
-header.breadcrumb.here=You are here:
+header.login=Sign in
+header.logout=Sign out
+header.breadcrumb.here=You are here
+header.breadcrumb.search.placeholder=Code
+header.breadcrumb.search.option.region=Region
+header.breadcrumb.search.option.department=Department
+header.breadcrumb.search.option.commune=Commune
+header.breadcrumb.search.option.bassin=Bassin
+header.breadcrumb.search.option.delegation=Delegation
 header.breadcrumb.search.button=Find
 header.menu.title.referentiel=Repository
 header.menu.item.searchregion=Region Search
@@ -25,3 +33,42 @@ login.password=Password
 login.username.placeholder=Enter Username
 login.password.placeholder=Enter Password
 login.submit=Log In
+
+# Commune Search page (communesearch.jsp)
+#communesearch.title=Commune Search
+communesearch.label.code=INSEE Code
+communesearch.label.name=Name
+communesearch.label.region=Region
+communesearch.label.department=Department
+communesearch.label.bassin=Bassin
+communesearch.label.date=Effective Date
+communesearch.option.chooseregion=Choose a region...
+communesearch.option.choosedept=Choose a department...
+communesearch.option.choosebassin=Choose a bassin...
+communesearch.button.reset=Reset
+communesearch.button.submit=Find
+communesearch.error.code=INSEE code is composed of five letters and numbers.
+communesearch.error.date=Invalid date.
+communesearch.error.empty=At least one field must be filled.
+
+# Page de Resultats de la Recherche Commune (communeresult.jsp)
+#communeresult.title=Liste des résultats
+communeresult.label.code=INSEE Code
+communeresult.label.name=Name
+communeresult.label.region=Region
+communeresult.label.department=Department
+communeresult.label.bassin=Bassin
+communeresult.label.date=Effective Date
+communeresult.tablecol.commune=Commune
+communeresult.tablecol.parents=Parent Entities
+communeresult.tablecol.commune.code=Code
+communeresult.tablecol.commune.name=Name
+communeresult.tablecol.commune.start=Beginning
+communeresult.tablecol.commune.end=End
+communeresult.tablecol.parents.reason=Modification reason
+communeresult.tablecol.parents.code=INSEE Code
+communeresult.button.back=Back
+communeresult.button.export=Export to Excel
+
+# Page de Details Commune (communedisplay.jsp)
+#communedisplay.title=Détails Commune
