--- a/rade-webapp/src/main/resources/i18n/messages.properties
+++ b/rade-webapp/src/main/resources/i18n/messages.properties
@@ -72,3 +72,22 @@ communeresult.button.export=Exporter sous Excel
 
 # Page de Details Commune (communedisplay.jsp)
 #communedisplay.title=Détails Commune
+communedisplay.details=Attributs commune
+communedisplay.details.code=Code INSEE
+communedisplay.details.article=Article
+communedisplay.details.richarticle=Article enrichi
+communedisplay.details.name=Nom commune
+communedisplay.details.richname=Nom commune enrichi
+communedisplay.geo=Rattachement commune
+communedisplay.geo.dept=Département
+communedisplay.geo.region=Région
+communedisplay.geo.bassin=Bassin
+communedisplay.history=Données historisation INSEE
+communedisplay.history.start=Début validité
+communedisplay.history.end=Fin validité
+communedisplay.history.reason=Motif de modification
+communedisplay.parents=Entités mères
+communedisplay.parents.none=Aucune entités mères
+communedisplay.children=Entités filles
+communedisplay.children.none=Aucune entités filles
+communedisplay.button.back=Retour
