--- a/rade-webapp/src/main/resources/i18n/messages_en.properties
+++ b/rade-webapp/src/main/resources/i18n/messages_en.properties
@@ -72,3 +72,22 @@ communeresult.button.export=Export to Excel
 
 # Page de Details Commune (communedisplay.jsp)
 #communedisplay.title=Détails Commune
+communedisplay.details=Commune Details
+communedisplay.details.code=INSEE Code
+communedisplay.details.article=Article
+communedisplay.details.richarticle=Rich Article
+communedisplay.details.name=Name
+communedisplay.details.richname=Rich Name
+communedisplay.geo=Geographical attachment details
+communedisplay.geo.dept=Department
+communedisplay.geo.region=Region
+communedisplay.geo.bassin=Bassin
+communedisplay.history=INSEE history details
+communedisplay.history.start=Beginning
+communedisplay.history.end=End
+communedisplay.history.reason=Modification reason
+communedisplay.parents=Parent Entities
+communedisplay.parents.none=No parents
+communedisplay.children=Child Entities
+communedisplay.children.none=No children
+communedisplay.button.back=Back
