--- a/rade-webapp/src/main/resources/i18n/messages.properties
+++ b/rade-webapp/src/main/resources/i18n/messages.properties
@@ -33,6 +33,8 @@ login.password=Mot de passe
 login.username.placeholder=Votre login
 login.password.placeholder=Votre mot de passe
 login.submit=Valider
+login.error=Login ou mot de passe invalide.
+login.logout=Vous avez été délogué avec succès.
 
 # Page de Recherche Commune (communesearch.jsp)
 #communesearch.title=Rechercher une Commune
@@ -50,6 +52,7 @@ communesearch.button.submit=Rechercher
 communesearch.error.code=Le code INSEE doit être composé de cinq chiffres ou lettres.
 communesearch.error.date=La date n'est pas valide.
 communesearch.error.empty=Au moins un des champs doit être renseigné.
+communesearch.error.noresult=La recherche n'a donné aucun résultat.
 
 # Page de Resultats de la Recherche Commune (communeresult.jsp)
 #communeresult.title=Liste des résultats
