--- a/rade-webapp/src/main/resources/i18n/messages_en.properties
+++ b/rade-webapp/src/main/resources/i18n/messages_en.properties
@@ -33,6 +33,8 @@ login.password=Password
 login.username.placeholder=Enter Username
 login.password.placeholder=Enter Password
 login.submit=Log In
+login.error=Invalid username or password.
+login.logout=You have been logged out successfully.
 
 # Commune Search page (communesearch.jsp)
 #communesearch.title=Commune Search
@@ -50,6 +52,7 @@ communesearch.button.submit=Find
 communesearch.error.code=INSEE code is composed of five letters and numbers.
 communesearch.error.date=Invalid date.
 communesearch.error.empty=At least one field must be filled.
+communesearch.error.noresult=No result respecting the criteria was found.
 
 # Page de Resultats de la Recherche Commune (communeresult.jsp)
 #communeresult.title=Liste des résultats
