Added Delegation Batch + Refactoring and Internationalisation of Batch pages

--- a/rade-webapp/src/main/resources/i18n/messages.properties
+++ b/rade-webapp/src/main/resources/i18n/messages.properties
@@ -94,3 +94,19 @@ communedisplay.parents.none=Aucune entités mères
 communedisplay.children=Entités filles
 communedisplay.children.none=Aucune entités filles
 communedisplay.button.back=Retour
+
+# Pages Batch (batchrequest.jsp & batchresult.jsp)
+batchrequest.title.info=Batch Info
+batchrequest.title.sandre=Batch Sandre
+batchrequest.title.delegation=Batch Délégation
+batchrequest.label.file=Choisissez un fichier
+batchrequest.button.browse=Parcourir
+batchrequest.button.submit=Envoyer
+batchresult.title.info=Résultat Batch Info
+batchresult.title.sandre=Résultat Batch Sandre
+batchresult.title.delegation=Résultat Batch Délégation
+batchresult.upload=Détails du téléchargement
+batchresult.job=Paramètres du Job
+batchresult.exec=Résultat d'Execution
+batchresult.message=Message
+batchresult.button.back=Retour
