--- a/rade-webapp/src/main/resources/i18n/messages_en.properties
+++ b/rade-webapp/src/main/resources/i18n/messages_en.properties
@@ -94,3 +94,19 @@ communedisplay.parents.none=No parents
 communedisplay.children=Child Entities
 communedisplay.children.none=No children
 communedisplay.button.back=Back
+
+# Batch pages (batchrequest.jsp & batchresult.jsp)
+batchrequest.title.info=Info Batch
+batchrequest.title.sandre=Sandre Batch
+batchrequest.title.delegation=Delegation Batch
+batchrequest.label.file=Select a file to upload
+batchrequest.button.browse=Browse
+batchrequest.button.submit=Submit
+batchresult.title.info=Info Batch Result
+batchresult.title.sandre=Sandre Batch Result
+batchresult.title.delegation=Delegation Batch Result
+batchresult.upload=Upload details
+batchresult.job=Job parameters
+batchresult.exec=Execution status
+batchresult.message=Message
+batch.button.back=Back
