--- a/rade-webapp/src/main/resources/i18n/messages.properties
+++ b/rade-webapp/src/main/resources/i18n/messages.properties
@@ -55,7 +55,7 @@ login.error=Login ou mot de passe invalide.
 login.logout=Vous avez été délogué avec succès.
 
 # Page de Recherche Commune (communesearch.jsp)
-#communesearch.title=Rechercher une Commune
+communesearch.title=Rechercher une Commune
 communesearch.label.code=Code INSEE
 communesearch.label.name=Nom
 communesearch.label.region=Région
@@ -73,7 +73,7 @@ communesearch.error.empty=Au moins un des champs doit être renseigné.
 communesearch.error.noresult=La recherche n'a donné aucun résultat.
 
 # Page de Resultats de la Recherche Commune (communeresult.jsp)
-#communeresult.title=Liste des résultats
+communeresult.title=Liste des résultats
 communeresult.label.code=Code INSEE
 communeresult.label.name=Nom
 communeresult.label.region=Région
@@ -92,7 +92,7 @@ communeresult.button.back=Retour
 communeresult.button.export=Exporter sous Excel
 
 # Page de Details Commune (communedisplay.jsp)
-#communedisplay.title=Détails Commune
+communedisplay.title=Détails Commune
 communedisplay.details=Attributs commune
 communedisplay.details.code=Code INSEE
 communedisplay.details.article=Article
