--- a/rade-webapp/src/main/resources/i18n/messages_en.properties
+++ b/rade-webapp/src/main/resources/i18n/messages_en.properties
@@ -55,7 +55,7 @@ login.error=Invalid username or password.
 login.logout=You have been logged out successfully.
 
 # Commune Search page (communesearch.jsp)
-#communesearch.title=Commune Search
+communesearch.title=Commune Search
 communesearch.label.code=INSEE Code
 communesearch.label.name=Name
 communesearch.label.region=Region
@@ -73,7 +73,7 @@ communesearch.error.empty=At least one field must be filled.
 communesearch.error.noresult=No result respecting the criteria was found.
 
 # Page de Resultats de la Recherche Commune (communeresult.jsp)
-#communeresult.title=Liste des résultats
+communeresult.title=Result List
 communeresult.label.code=INSEE Code
 communeresult.label.name=Name
 communeresult.label.region=Region
@@ -92,7 +92,7 @@ communeresult.button.back=Back
 communeresult.button.export=Export to Excel
 
 # Page de Details Commune (communedisplay.jsp)
-#communedisplay.title=Détails Commune
+communedisplay.title=Commune details
 communedisplay.details=Commune Details
 communedisplay.details.code=INSEE Code
 communedisplay.details.article=Article
