Batch Delegation Export job WebPage

--- a/rade-webapp/src/main/resources/i18n/messages.properties
+++ b/rade-webapp/src/main/resources/i18n/messages.properties
@@ -115,8 +115,8 @@ communedisplay.button.back=Retour
 
 # Pages Batch (batchrequest.jsp & batchresult.jsp)
 batchrequest.title.info=Batch Info
-batchrequest.title.sandre=Batch Sandre
-batchrequest.title.delegation=Batch Délégation
+batchrequest.title.sandre=Batch Import Sandre
+batchrequest.title.delegation=Batch Import Délégation
 batchrequest.label.file=Choisissez un fichier
 batchrequest.button.browse=Parcourir
 batchrequest.button.submit=Envoyer
