--- a/rade-webapp/src/main/resources/i18n/messages_en.properties
+++ b/rade-webapp/src/main/resources/i18n/messages_en.properties
@@ -115,8 +115,8 @@ communedisplay.button.back=Back
 
 # Batch pages (batchrequest.jsp & batchresult.jsp)
 batchrequest.title.info=Info Batch
-batchrequest.title.sandre=Sandre Batch
-batchrequest.title.delegation=Delegation Batch
+batchrequest.title.sandre=Sandre Import Batch
+batchrequest.title.delegation=Delegation Import Batch
 batchrequest.label.file=Select a file to upload
 batchrequest.button.browse=Browse
 batchrequest.button.submit=Submit
