Mostly clean ups

--- a/rade-webapp/src/main/resources/i18n/messages.properties
+++ b/rade-webapp/src/main/resources/i18n/messages.properties
@@ -45,7 +45,7 @@ header.menu.item.admin.services=Services
 header.menu.item.admin.batch=Batchs
 
 # Page de Login (login.jsp)
-#login.title=Login
+login.title=Login
 login.username=Login
 login.password=Mot de passe
 login.username.placeholder=Votre login
@@ -128,3 +128,15 @@ batchresult.job=Paramètres du Job
 batchresult.exec=Résultat d'Execution
 batchresult.message=Message
 batchresult.button.back=Retour
+
+# Autres Pages
+# Page d'aide en ligne (aide.jsp)
+aide.title=Aide
+# Page d'erreur (error.jsp)
+error.date=Date
+error.error=Erreur
+error.status=Etat
+error.message=Message
+error.exception=Exception
+error.trace=Stacktrace
+error.500=Erreur interne du serveur
