--- a/rade-webapp/src/main/resources/i18n/messages_en.properties
+++ b/rade-webapp/src/main/resources/i18n/messages_en.properties
@@ -45,7 +45,7 @@ header.menu.item.admin.services=Services
 header.menu.item.admin.batch=Batches
 
 # Login Page (login.jsp)
-#login.title=Login
+login.title=Login
 login.username=Username
 login.password=Password
 login.username.placeholder=Enter Username
@@ -128,3 +128,15 @@ batchresult.job=Job parameters
 batchresult.exec=Execution status
 batchresult.message=Message
 batch.button.back=Back
+
+# Other Pages
+# Online Help page (aide.jsp)
+aide.title=Help
+# Error page (error.jsp)
+error.date=Date
+error.error=Error
+error.status=Status
+error.message=Message
+error.exception=Exception
+error.trace=Trace
+error.500=Internal Server Error
