--- a/rade-webapp/src/main/resources/i18n/messages.properties
+++ b/rade-webapp/src/main/resources/i18n/messages.properties
@@ -117,12 +117,14 @@ communedisplay.button.back=Retour
 batchrequest.title.info=Batch Info
 batchrequest.title.sandre=Batch Import Sandre
 batchrequest.title.delegation=Batch Import Délégation
+batchrequest.title.historiqueinsee=Batch Import Historique INSEE
 batchrequest.label.file=Choisissez un fichier
 batchrequest.button.browse=Parcourir
 batchrequest.button.submit=Envoyer
 batchresult.title.info=Résultat Batch Info
 batchresult.title.sandre=Résultat Batch Sandre
 batchresult.title.delegation=Résultat Batch Délégation
+batchresult.title.historiqueinsee=Résultat Batch Historique INSEE
 batchresult.upload=Détails du téléchargement
 batchresult.job=Paramètres du Job
 batchresult.exec=Résultat d'Execution
