--- a/rade-webapp/src/main/resources/i18n/messages_en.properties
+++ b/rade-webapp/src/main/resources/i18n/messages_en.properties
@@ -117,6 +117,7 @@ communedisplay.button.back=Back
 batchrequest.title.info=Info Batch
 batchrequest.title.sandre=Sandre Import Batch
 batchrequest.title.delegation=Delegation Import Batch
+batchrequest.title.communeinsee=Commune INSEE Import Batch
 batchrequest.title.historiqueinsee=INSEE History Import Batch
 batchrequest.label.file=Select a file to upload
 batchrequest.button.browse=Browse
@@ -124,6 +125,7 @@ batchrequest.button.submit=Submit
 batchresult.title.info=Info Batch Result
 batchresult.title.sandre=Sandre Batch Result
 batchresult.title.delegation=Delegation Batch Result
+batchresult.title.communeinsee=Commune INSEE Batch Result
 batchresult.title.historiqueinsee=INSEE History Batch Result
 batchresult.upload=Upload details
 batchresult.job=Job parameters
